Verbeteringen aan de inleiding van de gebruikershandleiding

--- a/Hoofdstukken/appendices.tex
+++ b/Hoofdstukken/appendices.tex
@@ -4,7 +4,7 @@
 \newcommand{\type}[1]{\inlinecode{#1}}
 \newcommand{\events}{\type{Event}'s\xspace}
 \newcommand{\actions}{\type{Action}'s\xspace}
-\newcommand{\shapes}{\type{Shapes}'s\xspace}
+\newcommand{\shapes}{\type{Shape}'s\xspace}
 \newcommand{\shape}{\type{Shape}\xspace}
 
 
