--- a/Hoofdstukken/resultaten/performance_analyse.tex
+++ b/Hoofdstukken/resultaten/performance_analyse.tex
@@ -15,7 +15,7 @@ In \autoref{sec:aanbevelingen} wordt een aanbeveling gedaan voor het aanpakken v
 
 \subsection{Performance Haskell-code}
 
-In de module is een optimalisatie doorgevoerd die temaken heeft met hetvertalen van strings naar verschillend types. Er was het vermoeden dat er in de Haskell code van Canvas.hs veel peformance verloren zou gaan doordat we \inlinecode{String}s naar \inlinecode{ByteStrings} naar \inlinecode{Text} vertaalde. Het bleek dat de laatste vertaalslag overbodig is, en daartoe is deze verwijderd. Hieronder volgen twee grafieken, \autoref{fig:performance1} en \autoref{fig:performance2}~, die het geheugengebruik van de module van Canvas.hs demonstreren met en zonder de extra translaties.
+In de module is een optimalisatie doorgevoerd die temaken heeft met hetvertalen van strings naar verschillend types. Er was het vermoeden dat er in de Haskell code van Canvas.hs veel peformance verloren zou gaan doordat we \inlinecode{Strings} naar \inlinecode{ByteStrings} naar \inlinecode{Text} vertaalde. Het bleek dat de laatste vertaalslag overbodig is, en daartoe is deze verwijderd. Hieronder volgen twee grafieken, \autoref{fig:performance1} en \autoref{fig:performance2}~, die het geheugengebruik van de module van Canvas.hs demonstreren met en zonder de extra translaties.
 
 Uiteindelijk blijkt deze wijziging weinig verschil gemaakt te hebben in het totale geheugengebruik. Desondanks was de optimalisatie niet voor niets gezien het de Haskell-code een stuk leesbaarder heeft gemaakt. Wel is te zien dat in het eerste figuur de garbage collecting van Haskell aggresiever lijkt, dus allicht wordt zonder de wijziging toch meer memory tijdelijk gebruikt en vervolgens direct weer vrijgegeven. Verder valt op dat na de optimalisatie er toch \inlinecode{Text} in de heap profile staat. Dit is vermoederlijk omdat een van de libraries die gebruikt wordt door Canvas.hs daar intern gebruik van maakt.
 
