--- a/Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex
@@ -1,21 +1,21 @@
 \section{Inleiding}
 
-Canvas.hs is een Haskell bibliotheek om op een simpele manier grafische elementen vanuit een Haskell programma weer te geven en te reageren op input vanuit de gebruiker. Met behulp van een webbrowser, met JavaScript en canvaselement worden de primitieven getekend, en wordt op gebruikersinput gereageerd.
+Canvas.hs is een Haskell bibliotheek om op een simpele manier grafische elementen vanuit een Haskell programma weer te geven en te reageren op input vanuit de gebruiker. Met behulp van een webbrowser, JavaScript en het HTML5 canvaselement worden de primitieven getekend, en wordt er op gebruikersinput gereageerd.
 
-Canvas.hs maakt het mogelijk om interactie te hebben met de gebruiker, het bestandssysteem en andere elementen uit de ``echte wereld'' zonder gebruik te hoeven maken van de IO Monad. Op deze manier is het voor beginnende Haskell-programmeurs mogelijk om grafische programma's te schrijven zonder begrip te hebben van monads en monadische computaties.
+Canvas.hs maakt het mogelijk om grafischeinteractie te hebben met de gebruiker en het bestandssysteem zonder gebruik te hoeven maken van de IO Monad. Op deze manier is het voor beginnende Haskell-programmeurs mogelijk om grafische programma's te schrijven zonder de concepten achter monadische computaties volledig te hebben doorgrond.
 
-Om dit alles te bereiken wordt gebruik gemaakt van event-driven-IO. De programmeur schrijft een handler-functie die elk event (bijvoorbeeld een klik van de gebruiker) afhandelt en daaruit een nieuwe output (bestaande uit een aantal te tekenen objecten en uit te voeren acties) oplevert. De bibliotheek maakt het daarnaast mogelijk voor de handler om een state bij te houden en deze bij elk event te lezen en aan te passen. 
+Om dit alles te bereiken wordt gebruik gemaakt van event driven I/O. De programmeur schrijft een handler-functie die elk event  afhandelt. Een event kan bijvoorbeeld een muisklik zijn. Uit een event wordt een nieuwe output oplevert, bestaande uit een aantal te tekenen objecten en uit te voeren acties. De bibliotheek maakt het ook mogelijk voor de handler om een state bij te houden en deze bij elk event te lezen en aan te passen. 
 
-Kort gezegd maakt canvas.hs het volgende mogelijk:
+In een notendop maakt Canvas.hs het volgende mogelijk:
 \begin{itemize}
 	\item Grafische programma's schrijven in Haskell
 	\item Reageren op input, zoals muisklikken en toetsaanslagen
 	\item Interactie met het bestandssysteem, door bijvoorbeeld bestanden te lezen of op te slaan.
 	\item Meer, zoals het gebruik van klokken en het sturen en ontvangen van bestanden uit de browser.
 \end{itemize}
-Dit alles zonder gebruik te hoeven maken van monadisch programmeren. 
+Dit alles zonder gebruik te hoeven maken van monadisch programmeren.
 
-In deze gebruikershandleiding zal worden toegelicht hoe met behulp van Canvas.hs een grafisch haskellprogramma geschreven kan worden. Er zullen een aantal simpele voorbeelden gegeven worden, vervolgens zullen alle mogelijke te tekenen vormen (\shapes), uit te voeren acties (\actions) en te verwachten events (\events) uitgebreid worden toegelicht. 
+In deze gebruikershandleiding zal worden toegelicht hoe met behulp van Canvas.hs een grafisch haskellprogramma geschreven kan worden. Er zullen een aantal simpele voorbeelden gegeven worden, vervolgens zullen alle mogelijke te tekenen vormen, uit te voeren acties en te verwachten events uitgebreid worden toegelicht. 
 
 \paragraph{Definities}
-Een tweetal begrippen uit deze handleiding verdienen nog even aandacht. Allereerst wordt de lezer van de handleiding aangesproken, hiermee wordt de programmeur bedoeld, degene die de handler schrijft en met de Canvas.hs library werkt. Daarnaast wordt gesproken over de \emph{Gebruiker}, dit is de persoon die interactie met het programma heeft via de canvas.
+Een tweetal begrippen uit deze handleiding verdienen nog even aandacht. Allereerst wordt de lezer van de handleiding aangesproken, hiermee wordt de programmeur bedoeld, degene die de \emph{handler} schrijft en met de Canvas.hs library werkt. Daarnaast wordt gesproken over de \emph{Gebruiker}, dit is de persoon die interactie met het programma heeft via de canvas.
