--- a/Hoofdstukken/conclusie.tex
+++ b/Hoofdstukken/conclusie.tex
@@ -23,14 +23,14 @@ Een groot nadeel aan de eerste methode is dat het plaatje steeds opnieuw naar ba
 Het implementeren van nieuwe shapes wordt in een van de appendices uitgebreid besproken.
 
 \subsubsection{Kleurverlopen}
-Binnen Canvas.hs kan tot op heden alleen met vaste keuren gevuld worden, voor het tekenen van knoppen is het vaak gewenst iets van een kleurverloop te gebruiken. Een kleurverloop kan namelijk diepte bieden aan een grafisch element. Het ondersteunen van kleurverlopen is ook niet lastig, de clientside Javascript library (Kinetic) ondersteunt al kleurverlopen, dus het is een kwestie van het toevoegen en implementeren van een API voor de gebruiker.
+Binnen Canvas.hs kan tot op heden alleen met vaste keuren gevuld worden, voor het tekenen van knoppen is het vaak gewenst iets van een kleurverloop te gebruiken. Een kleurverloop kan namelijk diepte bieden aan een grafisch element. Het ondersteunen van kleurverlopen is ook niet lastig, de clientside JavaScript library KineticJS ondersteunt al kleurverlopen, dus het is een kwestie van het toevoegen en implementeren van een API voor de gebruiker.
 
 \subsubsection{Grafische toolkit}
 Canvas.hs is voornamelijk een tekenlibrary, de library ondersteunt het tekenen van primitieve figuren. Voor een echte gebruikersinterface is een grafische toolkit noodzakelijk die een set standaard elementen (widgets) bevat (knoppen, invoervelden, vensters etc.). Het voornaamste voordeel van een grafische toolkit is dat er geen rekening gehouden moet worden met event en dat de toolkit zelf bijhoud welk element focus heeft. Sommige demo's pogen widgets te gebruiken (zoals nederland\_demo), maar hierin zitten vaak fouten of events die niet afgevangen worden, daartoe is het handig al deze code te centraliseren en te abstraheren voor de gebruiker.
 
 Er is een aanzet gemaakt voor een grafische toolkit in \url{https://www.github.com/Canvas.hs/Widgets.hs} maar dit is in een vroeg stadium vastgelopen. Het idee echter was een nieuwe handler definitie die zichzelf tussen de library en de code van de gebruiker plaatsts, deze handler bekijkt voordat de gebruiker events kijkt eerst of een event op een widget was en gooit dan vervolgens een widgetspecifiek event. Daarnaast hoeven alleen definities gemaakt te worden voor widgets en kan de gebruiker voor de rest zonder Canvas.hs te recompilen gebruikmaken van de nieuwe widgets.
 
-Wel zal er goed nagedacht moeten worden over hoe (mogelijk) meerdere handlers met elkaar praten, wat nou als er zowel een WidgetHandler als een GraphHandler geschreven wordt? En daarnaast moet ook goed bekeken worden hoe de output van de widgets samengevoegd wordt met die van de gebruiker, is het de verantwoordelijkheid van de gebruiker om widgets te tekenen of voegt de library zelf zijn output in.
+Wel zal er goed nagedacht moeten worden over hoe meerdere handlers met elkaar communiceren, wat nou als er zowel een WidgetHandler als een GraphHandler geschreven wordt? En daarnaast moet ook goed bekeken worden hoe de output van de widgets samengevoegd wordt met die van de gebruiker, is het de verantwoordelijkheid van de gebruiker om widgets te tekenen of voegt de library zelf zijn output in.
 
 \subsubsection{Delta updates} \label{subsub:deltas}
 Op dit moment wordt de client behandeld alsof het stateless is, de module stuurt na elke verandering de hele grafische boom op en de client gooit zijn hele interne boom weg en accepteerd de nieuwe. Deze manier van werken is vanuit een Haskell oogpunt logisch, maar door het gebrek aan caching is het in Javascript traag. Daartoe is het handig om delta updates te sturen, zo kan er opgestuurd worden dat een rondje drie keer zo groot geworden is.
