--- a/Hoofdstukken/requirements.tex
+++ b/Hoofdstukken/requirements.tex
@@ -99,7 +99,7 @@ Operating systemen incompatibility was een ander probleem met de oude grafische 
 \end{enumerate}
 
 \paragraph{Gebruiksvriendelijke API}
-In eerste instantie gaan studenten van het vak Functioneel Programmeren gebruik maken van de library. Aangezien studenten bij het vak voor het eerst in aanraking komen met een functionele taal is werken met Monads buiten de scope van het vak gehouden. Bij het programmeren van een Haskellprogramma dat om kan gaan met reguliere I/O is het nodig de IO-monad te gebruiken. Daarom zal Canvas.hs moeten werken met I/O zonder monadische functies aan te bieden via zijn API.
+In eerste instantie gaan studenten van het vak Functioneel Programmeren gebruik maken van de library. Aangezien studenten bij het vak voor het eerst in aanraking komen met een functionele taal is werken met Monads buiten de scope van het vak gehouden. Bij het programmeren van een Haskellprogramma dat om kan gaan met reguliere I/O is het nodig de IO-monad te gebruiken. Daarom zal Canvas.hs zonder monadische functies moeten werken.
 
 \begin{enumerate}[label={R\arabic*}]
 \setcounter{enumi}{\value{startvalue}}
