--- a/Hoofdstukken/ontwerp.tex
+++ b/Hoofdstukken/ontwerp.tex
@@ -2,7 +2,7 @@
 In dit hoofdstuk wordt het ontwerp van de library beschreven. Dit zal gebeuren in twee delen. Ten eerste zal in \fullref{sec:globaal} de werking van Canvas.hs globaal beschreven worden. 
 Vervolgens zal het ontwerp van de library in detail toegelicht worden in \fullref{sec:detail}. In deze sectie zullen ook de keuzes voor verschillende \emph{externe libraries} uiteengezet worden. Externe libraries zijn de libraries waar Canvas.hs afhankelijk van is, dit zijn dan ook zogenaamde \emph{dependencies}. 
 
- \autoref{fig:demo_screenshot} geeft een voorbeeld van de interface van een demonstratie-applicatie van Canvas.hs weer. De interface die hier getoond wordt is volledig getekend in een HTML5 Canvas.
+ \autoref{fig:demo_screenshot} geeft een voorbeeld van een demonstratie-applicatie van Canvas.hs weer. De interface die hier getoond wordt is volledig getekend in een HTML5 Canvas.
 
 \begin{figure}[H]
 \begin{center}
