--- a/Hoofdstukken/testplan.tex
+++ b/Hoofdstukken/testplan.tex
@@ -1,12 +1,12 @@
 \chapter{Testplan} \label{hoofdstuk:testplan}
-Gedurende het gehele ontwikkelingstraject zullen tussenreslultaten getest moeten worden. Het heeft de voorkeur dat dit vaak gebeurd zonder dat er veel tijd nodig is voor het uitvoeren van de tests. Voor elke requirement, feature en elk object moet een bijbehorende test worden ontwikkeld.
+Gedurende het ontwikkelingstraject zijn tussenresultaten steeds getest. Bij voorkeur is er weinig tijd nodig voor het uitvoeren van de tests. Voor elke requirement, feature en elk object moet een bijbehorende test worden ontwikkeld.
 
-In het eerste deel van dit hoofdstuk zal voornamelijk beschreven staan hoe de automatische testen zijn opgezet. Doordat Canvas.hs gebruik maakt van verschillende programmeer talen zijn er uiteindelijk ook meerdere testtechnieken en libraries nodig om alles goed te testen en te meten. Maar omdat sommige requirements gemakkelijker automatisch te testen zijn dan andere zullen uiteindelijk ook een aantal requirements getest worden door een gebruiker in plaats van door een computer.
+In het eerste deel van dit hoofdstuk wordt beschreven hoe de automatische testen zijn opgezet. Doordat Canvas.hs gebruik maakt van verschillende programmeertalen zijn er ook meerdere testtechnieken en libraries nodig om alles goed te testen. Maar omdat sommige requirements gemakkelijker automatisch te testen zijn dan anderen, zullen uiteindelijk ook een aantal requirements handmatig getest moeten worden.
 
-De geschreven tests kunnen gemakkelijk uitgevoerd worden via \emph{Cabal}, een gereedschap dat gebruikt wordt bij programmeren in Haskell. Deze geschreven tests testen zowel de Haskell code als de JavaScript code. De testconfiguraties voor beide typen tests worden in het Cabal-bestand bijgehouden. Met het commando \inlinecode{Cabal test} kunnen alle tests van het project uitgevoerd worden. Op de website van Canvas.hs staan uitgebreide instructies over het uitvoeren van tests. \url{http://canvashs.github.io/test.html}
+De geschreven tests kunnen gemakkelijk uitgevoerd worden via \emph{Cabal}, een tool die gebruikt wordt bij programmeren in Haskell. Deze geschreven tests gaan zowel over de Haskell-code als over de JavaScript-code. De testconfiguraties voor beide typen tests worden in het Cabal-bestand bijgehouden. Met het commando \inlinecode{Cabal test} kunnen alle tests van het project uitgevoerd worden. Op de website van Canvas.hs staan uitgebreide instructies voor het uitvoeren van tests. Zie \url{http://canvashs.github.io/test.html}.
 
 \section{JavaScript} 
-Aan de client side wordt gewerkt met JavaScript. Het Jasmine\cite{Jasmine} test framework wordt gebruikt om de tests hiervoor te ontwikkelen. Door middel van PhantomJS\cite{PhantomJS} kunnen de tests vanaf de command prompt worden uitgevoerd zonder browser. Hierdoor kunnen de tests ook op de build server uitgevoerd worden. Verder wordt er gebruik gemaakt van de imagediff\cite{imagediff} library om getekende output te testen. Voor het meten van code coverage in JavaScript wordt gebruik gemaakt van Blanket.js\cite{Blanket.js}.
+Aan de client side wordt gewerkt met JavaScript. Het Jasmine \cite{Jasmine} test framework wordt gebruikt om de tests hiervoor te ontwikkelen. Door middel van PhantomJS \cite{PhantomJS} kunnen de tests vanaf de command prompt worden uitgevoerd zonder browser. Hierdoor kunnen de tests ook op de build server uitgevoerd worden. Verder wordt er gebruik gemaakt van de imagediff \cite{imagediff} library om getekende output te testen. Voor het meten van code coverage in JavaScript wordt gebruik gemaakt van Blanket.js \cite{Blanket.js}.
 
 \section{Haskell}
 De Haskell-code in Canvas.hs wordt getest met behulp van \emph{Hspec}\cite{Hspec}. Hier is voor gekozen omdat Hspec relatief eenvoudig werkt en goed integreert met Cabal. Hierbij kan Hspec automatisch de verschillende tests in een bestandsmap ontdekken en uitvoeren.
