--- a/Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex
@@ -26,6 +26,6 @@ Om te beginnen introduceren we hier eerst een voorbeeld van een programma dat ee
 
 \lstinputlisting[style=densecode]{Examples/CanvasHs101.hs}
 
-In het voorbeeld wordt een handler gemaakt. Deze eventHandler registreren we bij Canvas.hs met de functie installEventHandler. Deze eventHandler wordt aangeroepen als er een event plaatsvind. Als Canvas.hs dan een StartEvent vuurt (dit event vindt plaats als de servers succesvol gestart en verbonden zijn, zie \fullref{sec:handleiding_primitieven}), moet onze handler een state en een output teruggeven. Als state is een simpele integer gekozen en de output is in dit geval slechts een Shape. Deze code tekent een zwarte cirkel met radius 50 op punt (200,200).
+In het voorbeeld hierboven, wordt een handler gemaakt. Deze eventHandler registreren we bij Canvas.hs met de functie installEventHandler. Deze eventHandler wordt aangeroepen als er een event plaatsvind. Er is een speciaal \inlinecode{StartEvent} event en de bijbehorende handlerfunctie wordt aangeroepen als de servers succesvol gestart en verbonden is, zie \autoref{sec:handleiding_primitieven}. Als Canvas.hs een StartEvent vuurt moet onze handler een state en een output teruggeven. Als state is een simpele integer gekozen en de output is in dit geval slechts een Shape. Deze code tekent een zwarte cirkel met radius 50 op punt (200,200).
 
 Dit voorbeeld heeft geen modifiers, er zijn geen Shapes die werken op andere shapes. Daarnaast zijn er in dit eenvoudige voorbeeld geen Actions gebruikt. Er wordt uit de module CanvasHs wel een functie shape gebruikt, deze hulpfunctie returnt alleen een shape zonder acties en is daarmee gelijk aan \inlinecode{(Just shape, [])}.
