--- a/Hoofdstukken/appendices/1_gebruikershandleiding/primitieven.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/primitieven.tex
@@ -1,5 +1,5 @@
 % !TEX spellcheck = nl_NL
-\section{Primitieven}
+\section{Primitieven} \label{sec:handleiding_primitieven}
 Nu we hebben gezien hoe we op verschillende \events kunnen reageren, en hoe we op basis daarvan \type{Output} kunnen genereren in de vorm van \shapes en \actions is het tijd om een volledig overzicht te geven van alle mogelijke \events , \shapes , en \actions.
 
 Vergeet hierbij niet, zoals in het vorige hoofdstuk besproken, de types die belangrijk zijn voor Canvas.hs:
