deatilontwerp inleiding gefixt

--- a/Hoofdstukken/ontwerp/detail.tex
+++ b/Hoofdstukken/ontwerp/detail.tex
@@ -2,7 +2,7 @@
 
 In deze sectie wordt uitgebreid ingegaan op het ontwerp van de library. Eerst wordt de architectuur toegelicht in \autoref{subsec:architectuur} waar onder andere ingegaan wordt op de communicatie tussen de \emph{module} en de \emph{client}.
 
-In \autoref{subsec:externe_libraries} wordt uiteengezet wat welke overwegingen hebben geleid tot het gebruik van verschillende extrerne libraries/dependencies. Daarna wordt dieper ingegaan op de werking can de \emph{module}, de \emph{client} en ondervonden problemen. Tot slot wordt de het ontwerp voor de werking van de grafische bibliotheek verder toegelicht in \autoref{subsec:grafische_bibliotheek}.
+In \autoref{subsec:externe_libraries} wordt uiteengezet welke overwegingen hebben geleid tot het gebruik van verschillende extrerne libraries/dependencies. Daarna wordt dieper ingegaan op de werking van de \emph{module}, de \emph{client} en ondervonden problemen. Tot slot wordt de het ontwerp voor de werking van de grafische bibliotheek verder toegelicht in \autoref{subsec:grafische_bibliotheek}.
 
 \input{./Hoofdstukken/ontwerp/detail/architectuur.tex}
 \input{./Hoofdstukken/ontwerp/detail/externelibraries.tex}
