Testresultaten zinnetje verbeterd

--- a/Hoofdstukken/resultaten/testresultaten.tex
+++ b/Hoofdstukken/resultaten/testresultaten.tex
@@ -123,7 +123,7 @@ Er zijn non-functionele requirements opgesteld in \autoref{hoofdstuk:requirement
 	\setcounter{startvaluetest}{\value{enumi}}
 \end{enumerate}
 
-Met de code covarage libraries beschreven in \autoref{hoofdstuk:testplan} hebben we vast kunnen stellen dat onze testen de in JavaScript geschreven code voor 72\% dekken. De JavaScript code die niet door een test wordt uitgevoerd heeft vooral toepassing op invoer zoals invoer middels toetsaanslagen, al dan niet met een modifier-key als ctrl.
+Met de code covarage libraries beschreven in \autoref{hoofdstuk:testplan} hebben we vast kunnen stellen dat onze testen de in JavaScript geschreven code voor 72\% dekken. De JavaScript code die niet door een test wordt uitgevoerd heeft vooral toepassing op invoer zoals toetsaanslagen.
 
 \begin{figure}
 \begin{center}
