Achitectuur, zinnetjes aangepast en koppeltekens

--- a/Hoofdstukken/ontwerp/detail/architectuur.tex
+++ b/Hoofdstukken/ontwerp/detail/architectuur.tex
@@ -18,7 +18,7 @@ Gegevensoverdracht tussen de HTTP server en de browser moet snel gebeuren. Om de
 
 
 \paragraph{Websockets}
-Het is mogelijk om door middel van XMLHttpRequest of WebSockets een verbinding te onderhouden tussen de Module en de Clientomgeving. XMLHttpRequests worden door alle webbrowsers ondersteund, en kan door middel van longpolling technieken (Comet \cite{comet2007}) een verbinding onderhouden met de webserver. De meest recente browsers ondersteunen WebSockets. Dit biedt een socket verbinding tussen de client en de server. Het WebSockets protocol biedt een betere performance dan alle technieken op basis van XMLHttpRequests en biedt een groter implementatiegemak. Door het gebruik van het HTML canvaselement zal de browser ondersteuning al beperkt zijn tot de meest recente browsers. Canvas.hs maakt gebruik van WebSockets.
+Het is mogelijk om door middel van XMLHttpRequest of WebSockets een verbinding te onderhouden tussen de Module en de Clientomgeving. XMLHttpRequests worden door alle webbrowsers ondersteund, en kan door middel van longpolling technieken (Comet \cite{comet2007}) een verbinding onderhouden met de webserver. De meest recente browsers ondersteunen WebSockets. Dit biedt een socket verbinding tussen de client en de server. Het WebSockets protocol biedt een betere performance dan alle technieken op basis van XMLHttpRequests en biedt een groter implementatiegemak. Door het gebruik van het canvaselement zal de browser ondersteuning al beperkt zijn tot de meest recente browsers, deze zullen dus ook ondersteuning voor Websockets hebben. Canvas.hs maakt gebruik van WebSockets.
 
 \paragraph{Protocol}
 In Cavas.hs wordt voor deze communicatie gebruik gemaakt van JSON \cite{JSON2006}. JSON staat voor JavaScript Object Notation en is een notatie waarin objecten als text worden gerepresenteerd zoals dit ook in Javascript wordt gedaan. JSON is een veel gebruikte notatie voor communicatie met Javascript. Het voordeel van JSON is, doordat het zo veel gebruikt wordt, dat er veel bibliotheken beschikbaar zijn om met JSON om te gaan. Zowel voor javascript als voor Haskell was het eenvoudig een goede externe bibliotheek te vinden om data van en naar JSON te lezen en te schrijven. Een ander groot voordeel van JSON is dat het, in tegenstelling tot bijvoorbeeld XML, weinig overhead heeft. Een uitgebreide handleiding van het protocol van gevonden worden in \cite{Protocol2013}.
