--- a/Hoofdstukken/ontwerp/globaal.tex
+++ b/Hoofdstukken/ontwerp/globaal.tex
@@ -11,7 +11,7 @@ Canvas.hs is een library die de programmeur kan importeren in zijn programma om 
 \end{center}
 \end{figure}
 
-Een gebeurtenis die binnen het systeem plaatsvindt wordt ook wel een \emph{event} genoemd. Denk hierbij bijvoorbeeld aan een toetsaanslag of een muisklik. De user applicatie zal een eventHandler-functie moeten bevatten welke aangeroepen wordt na het plaatsvinden van een event. Deze eventHandler kan op basis van deze gebeurtenis een nieuwe grafische boom opleveren, hierbij kan gedacht worden aan een boom met daarin o.a. text en simpele vormen die samen een groter geheel vormen. Dit alles wordt hieronder toegelicht in \autoref{par:globaal_shapes}. De opgeleverde boom zal vervolgens op het canvas getekend worden. 
+Een gebeurtenis die binnen het systeem plaatsvindt wordt ook wel een \emph{event} genoemd. Denk hierbij bijvoorbeeld aan een toetsaanslag of een muisklik. De user applicatie zal een eventHandler-functie moeten bevatten welke aangeroepen wordt na het plaatsvinden van een event. Deze eventHandler kan op basis van deze gebeurtenis een nieuwe grafische boom opleveren, hierbij kan gedacht worden aan een boom met daarin onder andere text en simpele vormen die samen een groter geheel vormen. Dit alles wordt hieronder toegelicht in \autoref{par:globaal_shapes}. De opgeleverde boom zal vervolgens op het canvas getekend worden. 
 
 De eventHandler kan naast het opleveren van een nieuwe grafische boom ook nog een aantal uit te voeren acties opleveren; hierbij kan gedacht worden aan bijvoorbeeld het lezen of schrijven van bestanden. 
 
