--- a/references.bib
+++ b/references.bib
@@ -142,9 +142,9 @@
 	howpublished = {\url{http://blanketjs.org/}}
 }
 
-@misc{Websockets,
+@misc{WebSockets,
 	author = {Jasper Van der Jeugt and Siniša Biđin and Steffen Schuldenzucker and Alex Lang},
-	title = "Websockets",
+	title = "WebSockets",
 	month = "december",
 	year = "2013",
 	howpublished = {\url{http://hackage.haskell.org/package/websockets}}
