--- a/Hoofdstukken/ontwerp/detail/architectuur.tex
+++ b/Hoofdstukken/ontwerp/detail/architectuur.tex
@@ -3,7 +3,7 @@
 
 De applicatiearchitectuur die Canvas.hs gebruikt bestaat uit drie componenten. De applicatie van de gebruiker, de Canvas.hs module en de JavaScript Canvas.hs applicatie—in dit verslag aangeduid als de client. De module en de client vormen samen de Canvas.hs library.
 
-De Canvas.hs module biedt functies aan die de programmeur kan gebruiken om te tekenen en bepaalde acties uit te voeren in de browser. De module draait een server om te communiceren met de client. De client verbindt door middel van websockets met de server en geeft de output van het programma weer in een canvas HTML-element. In \autoref{fig:architectuur} is een schematische weergave van de architectuur weergegeven.
+De Canvas.hs module biedt functies aan die de programmeur kan gebruiken om te tekenen en bepaalde acties uit te voeren in de browser. De module draait een server om te communiceren met de client. De client verbindt door middel van WebSockets met de server en geeft de output van het programma weer in een canvas HTML-element. In \autoref{fig:architectuur} is een schematische weergave van de architectuur weergegeven.
 
 \begin{figure}
 \begin{center}
@@ -17,7 +17,7 @@ De Canvas.hs module biedt functies aan die de programmeur kan gebruiken om te te
 Gegevensoverdracht tussen de HTTP server en de browser moet snel gebeuren. Om de grafische elementen in de browser weer te geven moeten de output van de grafische interface naar de browser gecommuniceerd worden. Wanneer de gebruiker interactie heeft met de interface moet dit naar het programma van de gebruiker gecommuniceerd worden. Verder zal het programma bepaalde acties moeten kunnen uitvoeren op de webbrowser, zoals fullscreen laten gaan van de browser. Een belangrijke overwegingen is dat de grafische interface zo min mogelijk vertraging moet hebben.
 
 
-\paragraph{Websockets}
+\paragraph{WebSocket}
 Het is mogelijk om door middel van XMLHttpRequest of WebSockets een verbinding te onderhouden tussen de Module en de Clientomgeving. XMLHttpRequests worden door alle webbrowsers ondersteund, en kan door middel van longpolling technieken (Comet \cite{comet2007}) een verbinding onderhouden met de webserver. De meest recente browsers ondersteunen WebSockets. Dit biedt een socket verbinding tussen de client en de server. Het WebSockets protocol biedt een betere performance dan alle technieken op basis van XMLHttpRequests en biedt een groter implementatiegemak. Door het gebruik van het HTML canvaselement zal de browser ondersteuning al beperkt zijn tot de meest recente browsers. Canvas.hs maakt gebruik van WebSockets.
 
 \paragraph{Protocol}
@@ -28,4 +28,4 @@ Het protocol tussen de client en de server bevat voornamelijk interface data. De
 \paragraph{Statelessness} \label{par:statelessness}
 De Canvas.hs module houdt de huidige grafische boom niet bij. Deze wordt na ontvangst in de gebruikerapplicatie onmiddellijk geëncodeerd naar JSON en opgestuurd naar de Javascriptapplicatie. Dit heeft een aantal voordelen. Allereerst maakt dit het gebruik van de module door de programmeur gemakkelijker. Elke keer dat de eventHandler wordt uitgevoerd wordt hiervan verwacht dat deze een volledige grafische boom oplevert waardoor het voor de programmeur en de module niet nodig is om uit te zoeken waar de grafische boom precies veranderd moet worden. Bovendien is er hierdoor slechts één plek is waar de huidige grafische boom wordt bijgehouden: de Javascriptapplicatie. Hierdoor kunnen er geen synchronisatiefouten tussen de Haskell module en de Javascriptapplicatie ontstaan. 
 
-Nadeel van deze aanpak is dat er veel overhead is door het voortdurend versturen van de volledige grafische boom. Zelfs voor het verplaatsen van één object moet de hele boom opnieuw verstuurd worden. Dat er veel data verstuurd wordt is acceptabel aangezien het systeem ontwikkeld is voor lokaal gebruik en data over websockets lokaal zeer snel verstuurd kan worden. De aanpak levert echter wel problemen op als er snel veel getekend wordt, doordat het tekenen naar het canvas in onze aanpak relatief veel tijd kost en dat moet elke keer dat de boom ontvangen wordt aan de Javascriptkant gedaan worden. Op dit probleem wordt verder gereflecteerd in de paragraaf over delta updates van \fullref{hoofdstuk:conclusie}.
+Nadeel van deze aanpak is dat er veel overhead is door het voortdurend versturen van de volledige grafische boom. Zelfs voor het verplaatsen van één object moet de hele boom opnieuw verstuurd worden. Dat er veel data verstuurd wordt is acceptabel aangezien het systeem ontwikkeld is voor lokaal gebruik en data over WebSockets lokaal zeer snel verstuurd kan worden. De aanpak levert echter wel problemen op als er snel veel getekend wordt, doordat het tekenen naar het canvas in onze aanpak relatief veel tijd kost en dat moet elke keer dat de boom ontvangen wordt aan de Javascriptkant gedaan worden. Op dit probleem wordt verder gereflecteerd in de paragraaf over delta updates van \fullref{hoofdstuk:conclusie}.
