--- a/Hoofdstukken/ontwerp/detail/architectuur.tex
+++ b/Hoofdstukken/ontwerp/detail/architectuur.tex
@@ -21,11 +21,11 @@ Gegevensoverdracht tussen de HTTP server en de browser moet snel gebeuren. Om de
 Het is mogelijk om door middel van XMLHttpRequest of WebSockets een verbinding te onderhouden tussen de Module en de Clientomgeving. XMLHttpRequests worden door alle webbrowsers ondersteund, en kan door middel van longpolling technieken (Comet \cite{comet2007}) een verbinding onderhouden met de webserver. De meest recente browsers ondersteunen WebSockets. Dit biedt een socket verbinding tussen de client en de server. Het WebSockets protocol biedt een betere performance dan alle technieken op basis van XMLHttpRequests en biedt een groter implementatiegemak. Door het gebruik van het HTML canvaselement zal de browser ondersteuning al beperkt zijn tot de meest recente browsers. Canvas.hs maakt gebruik van WebSockets.
 
 \paragraph{Protocol}
-In Cavas.hs wordt voor deze communicatie gebruik gemaakt van JSON \cite{JSON2006}. JSON staat voor JavaScript Object Notation en is een notatie waarin objecten als text worden gerepresenteerd zoals dit ook in Javascript wordt gedaan. JSON is een veel gebruikte notatie voor communicatie met Javascript. Het voordeel van JSON is, doordat het zo veel gebruikt wordt, dat er veel bibliotheken beschikbaar zijn om met JSON om te gaan. Zowel voor javascript als voor Haskell was het eenvoudig een goede externe bibliotheek te vinden om data van en naar JSON te lezen en te schrijven. Een ander groot voordeel van JSON is dat het, in tegenstelling tot bijvoorbeeld XML, weinig overhead heeft. Een uitgebreide handleiding van het protocol van gevonden worden in \cite{Protocol2013}.
+In Cavas.hs wordt voor deze communicatie gebruik gemaakt van JSON \cite{JSON2006}. JSON staat voor JavaScript Object Notation en is een notatie waarin objecten als text worden gerepresenteerd zoals dit ook in JavaScript wordt gedaan. JSON is een veel gebruikte notatie voor communicatie met JavaScript. Het voordeel van JSON is, doordat het zo veel gebruikt wordt, dat er veel bibliotheken beschikbaar zijn om met JSON om te gaan. Zowel voor JavaScript als voor Haskell was het eenvoudig een goede externe bibliotheek te vinden om data van en naar JSON te lezen en te schrijven. Een ander groot voordeel van JSON is dat het, in tegenstelling tot bijvoorbeeld XML, weinig overhead heeft. Een uitgebreide handleiding van het protocol van gevonden worden in \cite{Protocol2013}.
 
-Het protocol tussen de client en de server bevat voornamelijk interface data. De structuur en de attributen moeten vertaald worden van de Haskell omgeving om gebruikt te worden om te tekenen in het Canvas en vervolgens input van de gebruiker in de client te ondersteunen. De datastructuur van het protocol lijkt zoveel mogelijk op die van het canvas. Hierdoor kan data die binnenkomt bij de javascript applicatie zonder al te veel veranderingen op het canvas getekend worden.
+Het protocol tussen de client en de server bevat voornamelijk interface data. De structuur en de attributen moeten vertaald worden van de Haskell omgeving om gebruikt te worden om te tekenen in het Canvas en vervolgens input van de gebruiker in de client te ondersteunen. De datastructuur van het protocol lijkt zoveel mogelijk op die van het canvas. Hierdoor kan data die binnenkomt bij de JavaScript applicatie zonder al te veel veranderingen op het canvas getekend worden.
 
 \paragraph{Statelessness} \label{par:statelessness}
-De Canvas.hs module houdt de huidige grafische boom niet bij. Deze wordt na ontvangst in de gebruikerapplicatie onmiddellijk geëncodeerd naar JSON en opgestuurd naar de Javascriptapplicatie. Dit heeft een aantal voordelen. Allereerst maakt dit het gebruik van de module door de programmeur gemakkelijker. Elke keer dat de eventHandler wordt uitgevoerd wordt hiervan verwacht dat deze een volledige grafische boom oplevert waardoor het voor de programmeur en de module niet nodig is om uit te zoeken waar de grafische boom precies veranderd moet worden. Bovendien is er hierdoor slechts één plek is waar de huidige grafische boom wordt bijgehouden: de Javascriptapplicatie. Hierdoor kunnen er geen synchronisatiefouten tussen de Haskell module en de Javascriptapplicatie ontstaan. 
+De Canvas.hs module houdt de huidige grafische boom niet bij. Deze wordt na ontvangst in de gebruikerapplicatie onmiddellijk geëncodeerd naar JSON en opgestuurd naar de JavaScriptapplicatie. Dit heeft een aantal voordelen. Allereerst maakt dit het gebruik van de module door de programmeur gemakkelijker. Elke keer dat de eventHandler wordt uitgevoerd wordt hiervan verwacht dat deze een volledige grafische boom oplevert waardoor het voor de programmeur en de module niet nodig is om uit te zoeken waar de grafische boom precies veranderd moet worden. Bovendien is er hierdoor slechts één plek is waar de huidige grafische boom wordt bijgehouden: de JavaScriptapplicatie. Hierdoor kunnen er geen synchronisatiefouten tussen de Haskell module en de JavaScriptapplicatie ontstaan. 
 
-Nadeel van deze aanpak is dat er veel overhead is door het voortdurend versturen van de volledige grafische boom. Zelfs voor het verplaatsen van één object moet de hele boom opnieuw verstuurd worden. Dat er veel data verstuurd wordt is acceptabel aangezien het systeem ontwikkeld is voor lokaal gebruik en data over WebSockets lokaal zeer snel verstuurd kan worden. De aanpak levert echter wel problemen op als er snel veel getekend wordt, doordat het tekenen naar het canvas in onze aanpak relatief veel tijd kost en dat moet elke keer dat de boom ontvangen wordt aan de Javascriptkant gedaan worden. Op dit probleem wordt verder gereflecteerd in de paragraaf over delta updates van \fullref{hoofdstuk:conclusie}.
+Nadeel van deze aanpak is dat er veel overhead is door het voortdurend versturen van de volledige grafische boom. Zelfs voor het verplaatsen van één object moet de hele boom opnieuw verstuurd worden. Dat er veel data verstuurd wordt is acceptabel aangezien het systeem ontwikkeld is voor lokaal gebruik en data over WebSockets lokaal zeer snel verstuurd kan worden. De aanpak levert echter wel problemen op als er snel veel getekend wordt, doordat het tekenen naar het canvas in onze aanpak relatief veel tijd kost en dat moet elke keer dat de boom ontvangen wordt aan de JavaScriptkant gedaan worden. Op dit probleem wordt verder gereflecteerd in de paragraaf over delta updates van \fullref{hoofdstuk:conclusie}.
