--- a/Hoofdstukken/evaluatie/problemen.tex
+++ b/Hoofdstukken/evaluatie/problemen.tex
@@ -1,6 +1,6 @@
 \section{Problemen}
 
-Bij het ontwerp en implementatie van het project zijn er een aantal moeilijkheden geweest die het uiteindelijke ontwerp van Canvas.hs sterk hebben beïnvloed. Deze ontstonden onder andere door het ontwijken van het gebruik van monadisch programmeren voor de student en door de samenwerking tussen Haskell en Javascript. Hieronder een kort overzicht van deze belangrijkste problemen.
+Bij het ontwerp en implementatie van het project zijn er een aantal moeilijkheden geweest die het uiteindelijke ontwerp van Canvas.hs sterk hebben beïnvloed. Deze ontstonden onder andere door het ontwijken van het gebruik van monadisch programmeren voor de student en door de samenwerking tussen Haskell en JavaScript. Hieronder een kort overzicht van deze belangrijkste problemen.
 
 \subsubsection{Kennis Haskell}
 Bij het begin van het Canvas.hs-project was de kennis over Haskell en functioneel programmeren in het algemeen beperkt tot de kennis opgedaan met het vak Functioneel programmeren. Hoewel dit een solide basis vormt is het doel van Canvas.hs juist om een aantal concepten die niet binnen dit vak passen af te schermen van de studenten. Dit betekende dat er bij het project van deze concepten gebruik moest worden gemaakt en wij hebben ons deze eigen moeten maken. Zoals altijd bij het leren van nieuwe concepten leverde dit af en toe code die niet optimaal gebruik maakte van de beschikbare mogelijkheden.
@@ -20,12 +20,12 @@ Er moest een manier gevonden worden zodat de handler zowel acties als grafische 
 \paragraph{Acties met resultaat}
 Naast het bovenstaande is er nog een probleem met acties. Sommige acties hebben geen resultaat, zoals bijvoorbeeld het aanzetten van de Debug-console, of ze hebben pas later resultaat, zoals bijvoorbeeld het starten van een Timer of het vragen om een bestand van de gebruiker. Echter zijn er ook acties, zoals het openen van een bestand, die onmiddellijk resultaat opleveren. 
 
-Dit laatste type actie kan niet met een grafische boom gecombineerd worden. Als dit wel toegestaan zou zijn kan er een onduidelijkheid ontstaan. De actie zou dan worden uitgevoerd en een resultaat opleveren dat vervolgens weer door de user applicatie wordt verwerkt. Hieruit zou weer een nieuwe grafische boom kunnen komen. Er zijn dan twee aparte grafische bomen, waarvan er slechts één naar de Javascript applicatie kan worden gestuurd. De user applicatie zou zelfs weer zo'n actie op kunnen leveren, waardoor er drie te versturen grafische bomen zouden kunnen liggen, etc. 
+Dit laatste type actie kan niet met een grafische boom gecombineerd worden. Als dit wel toegestaan zou zijn kan er een onduidelijkheid ontstaan. De actie zou dan worden uitgevoerd en een resultaat opleveren dat vervolgens weer door de user applicatie wordt verwerkt. Hieruit zou weer een nieuwe grafische boom kunnen komen. Er zijn dan twee aparte grafische bomen, waarvan er slechts één naar de JavaScript applicatie kan worden gestuurd. De user applicatie zou zelfs weer zo'n actie op kunnen leveren, waardoor er drie te versturen grafische bomen zouden kunnen liggen, etc. 
 
 Er is daarom voor gekozen om de acties in twee types op te delen, acties die geen direct resultaat (\inlinecode{Action}) op leveren en acties die direct resultaat op leveren (\inlinecode{BlockingAction}). Van dit eerste kunnen er zoveel worden opgegeven als gewenst en deze kunnen gecombineerd worden met een te tekenen grafisch element. Het tweede type kan niet met een grafische boom gecombineerd worden en het resultaat kan ook uit slechts één zo'n actie bestaan. 
 
 \subsubsection{Verschillen systemen}
-Doordat er bij het tekenen van de grafische elementen gebruik wordt gemaakt van javascript en canvas in de browser van de gebruiker ontstaan er door inconsequenties tussen bugs in browsers en besturingssystemen een aantal problemen. Veel van deze problemen hebben we opgevangen door gebruik te maken van bibliotheken aan de Javascript kant als jQuery en KineticJS. 
+Doordat er bij het tekenen van de grafische elementen gebruik wordt gemaakt van JavaScript en canvas in de browser van de gebruiker ontstaan er door inconsequenties tussen bugs in browsers en besturingssystemen een aantal problemen. Veel van deze problemen hebben we opgevangen door gebruik te maken van bibliotheken aan de JavaScript kant als jQuery en KineticJS. 
 
 \paragraph{Systeemtoetsen} Echter zijn er een aantal zaken waar systemen zo in verschillen dat we deze niet voor alle mogelijke systemen hebben afgevangen in Canvas.hs. Er zijn bijvoorbeeld grote verschillen in de toetsenborden tussen verschillende systemen. Zo heeft windows een windows-toets, OS X een command-toets en noemen de meeste Linux distributies deze knop de super-toets, we hebben er in Canvas.hs voor gekozen al deze toetsen onder de naam 'superkey' te scharen.
 
@@ -41,4 +41,4 @@ De meestgebruikte JSON libraries vertalen records naar JSON. Hierbij nemen ze de
 
 
 \paragraph{Threads}
-Bij het gebruik van Canvas.hs lopen verschillende threads om verschillende delen van het programma af te handelen. In het main thread van het haskellprogramma wordt canvas.hs aangeropen, er wordt dan vervolgens een apart thread gestart voor de HTTP-server en in het mainthread wordt de websocketsserver gestart. Deze websocketsserver zal vervolgens ook de eventHandler van de gebruiker aanroepen. Daarnaast lopen door de student gestarte \inlinecode{Timer}s ook elk in een eigen thread. Bij de originele implementatie van deze threads werden al deze extra threads niet netjes gestops als het main thread werd gestopt. Door met behulp van MVars te communiceren tussen de main thread en de extra threads worden ook deze extra threads inmiddels netjes gestopt.
+Bij het gebruik van Canvas.hs lopen verschillende threads om verschillende delen van het programma af te handelen. In het main thread van het haskellprogramma wordt canvas.hs aangeropen, er wordt dan vervolgens een apart thread gestart voor de HTTP-server en in het mainthread wordt de WebSocketsserver gestart. Deze WebSocketsserver zal vervolgens ook de eventHandler van de gebruiker aanroepen. Daarnaast lopen door de student gestarte \inlinecode{Timer}s ook elk in een eigen thread. Bij de originele implementatie van deze threads werden al deze extra threads niet netjes gestops als het main thread werd gestopt. Door met behulp van MVars te communiceren tussen de main thread en de extra threads worden ook deze extra threads inmiddels netjes gestopt.
